--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">secondproject01</string>
+    <string name="app_name">추억상자</string>
     <string name="title_activity_main">추억상자</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="facebook_app_id">738419366312728</string>
+    <string name="facebook_app_id">1642865252682496</string>
     <string name="fb_login_protocol_scheme">fb738419366312728</string>
 
     <!-- TODO: Remove or change this placeholder text -->
